Fix layout shift from ionicons

--- a/spudoolicom/static/style.css
+++ b/spudoolicom/static/style.css
@@ -4355,6 +4355,9 @@ input[type="submit"]:focus {
 
 
 ion-icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
   font-size: 32px;
 }
 
